# agents-notifier

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  install.ps1  install.sh  justfile  release-please-config.json
.github/workflows/: release-please.yml  release.yml
docs/: README.zh-CN.md  setup.md  setup.zh-CN.md
docs/agents/: README.md  README.zh-CN.md  aider.md  aider.zh-CN.md  claude-code.md  claude-code.zh-CN.md  codex-cli.md  codex-cli.zh-CN.md  cursor-cli.md  gemini-cli.md  gemini-cli.zh-CN.md  github-copilot-cli.md  github-copilot-cli.zh-CN.md  hermes-agent-cli.md  openclaw.md  opencode-cli.md  structured-agent-hook.md
docs/providers/: README.md  README.zh-CN.md  discord.md  discord.zh-CN.md  email-smtp.md  email-smtp.zh-CN.md  feishu-lark-custom-bot.md  feishu-lark-custom-bot.zh-CN.md  microsoft-teams.md  microsoft-teams.zh-CN.md  ntfy.md  ntfy.zh-CN.md  pushover.md  pushover.zh-CN.md  slack.md  slack.zh-CN.md  telegram.md  telegram.zh-CN.md  webhook.md  webhook.zh-CN.md  wechat.md  wechat.zh-CN.md  weixin.md  weixin.zh-CN.md  whatsapp.md  whatsapp.zh-CN.md
packaging/homebrew/: agents-notifier.rb.template  agents-router.rb.template
packaging/npm/: README.md
scripts/: prepare-npm-release.js  publish-npm-local.js  publish-npm-release.js  release.sh
src/: config.rs  delivery.rs  delivery_safety.rs  i18n.rs  legacy.rs  lib.rs  local_ingress.rs  local_integrations.rs  local_machine.rs  local_open_bridge.rs  main.rs  notification_detail_policy.rs  paths.rs  process.rs  provider_catalog.rs  provider_urls.rs  router.rs  runtime.rs  service.rs  setup.rs  signal.rs  signal_builder.rs  source_integration_catalog.rs  update.rs
src/cli/: mod.rs  setup_flow.rs  tests.rs  update_flow.rs
src/config/: tests.rs
src/local_ingress/: tests.rs
src/providers/: contract_test.rs  discord.rs  email_smtp.rs  (+14 more)
tests/: architecture_contracts.rs  emit_cli.rs  source_contracts.rs  start_cli.rs
(+38 files in other folders)
