[package]
name = "agents-notifier"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive", "env"] }
regex = "1.12.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.52.2", features = ["macros", "rt-multi-thread", "process", "signal", "io-util", "fs", "net", "time"] }
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
uuid = { version = "1.23.1", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3.27.0"
wiremock = "0.6.5"
