[package]
name = "agents-notifier"
version = "0.8.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
base64 = "0.22.1"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive", "env"] }
console = "0.16.3"
dialoguer = { version = "0.12.0", default-features = false, features = ["password"] }
hmac = "0.13.0"
indicatif = "0.18.4"
lettre = { version = "0.11.21", default-features = false, features = ["builder", "smtp-transport", "tokio1-rustls-tls"] }
qrcode = { version = "0.14.1", default-features = false }
regex = "1.12.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
thiserror = "2.0.18"
tokio = { version = "1.52.2", features = ["macros", "rt-multi-thread", "process", "signal", "io-util", "fs", "net", "time"] }
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
uuid = { version = "1.23.1", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3.27.0"
wiremock = "0.6.5"
